--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@
 
     <h2>Publications</h2>
     <ul>
+        <li class="pub">
+        [To be appear] <b>Demystifying RPKI-Invalid Prefixes: Hidden Causes and Security Risks</b>
+        &nbsp;
+        <br />
+        <b>Weitong Li</b>, Tao Wan, and Taejoong Chung <br />
+        In Proceedings of the Network and Distributed System Security Symposium (NDSS'26), San Diego, USA, February 2026<br />
+
+
       <li class="pub">
         <a href="publications/papers/li-2025-router.pdf" class="paper">ImpROV: Measurement and Practical Mitigation of Collateral Damage of RPKI Route Origin Validation</a> 
         &nbsp;
