--- a/index.html
+++ b/index.html
@@ -73,13 +73,6 @@
     <h2>Publications</h2>
     <ul>
       <li class="pub">
-        <a href="publications/papers/li-2025-router.pdf" class="paper">ImpROV: Measurement and Practical Mitigation of Collateral Damage of RPKI Route Origin Validation</a> 
-        &nbsp;
-        <br />
-        <b>Weitong Li</b>, Yuze Li, and Taejoong Chung <br />
-        In Proceedings of the USENIX Security Symposium (Security'25), Seattle, USA, August 2025 <br />
-
-      <li class="pub">
         <a href="publications/papers/ashiq-2024-spf.pdf" class="paper">SPF Beyond the Standard: Management and Operational Challenges in Practice and Practical Recommendations</a> 
         &nbsp;
         <br />
@@ -123,6 +116,9 @@
       <b>Technical Program Committee Member:</b>
     </p>
     <ul>
+      <li>
+        USENIX Security Symposium (Security'26)
+      </li>
       <li>
         ACM Internet Measurement Conference (shadow TPC for IMC'22, 25)
       </li>
