--- a/index.html
+++ b/index.html
@@ -72,6 +72,22 @@
 
     <h2>Publications</h2>
     <ul>
+
+        <li class="pub">
+        [To be appear] <b>Demystifying RPKI-Invalid Prefixes: Hidden Causes and Security Risks</b>
+        &nbsp;
+        <br />
+        <b>Weitong Li</b>, Tao Wan, and Taejoong Chung <br />
+        In Proceedings of the Network and Distributed System Security Symposium (NDSS'26), San Diego, USA, February 2026<br />
+
+
+      <li class="pub">
+        <a href="publications/papers/li-2025-router.pdf" class="paper">ImpROV: Measurement and Practical Mitigation of Collateral Damage of RPKI Route Origin Validation</a> 
+        &nbsp;
+        <br />
+        <b>Weitong Li</b>, Yuze Li, and Taejoong Chung <br />
+        In Proceedings of the USENIX Security Symposium (Security'25), Seattle, USA, August 2025 <br />
+        
       <li class="pub">
         <a href="publications/papers/ashiq-2024-spf.pdf" class="paper">SPF Beyond the Standard: Management and Operational Challenges in Practice and Practical Recommendations</a> 
         &nbsp;
