--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
     <h2>Recent Updates</h2>
     <ul>
       <li>
+        [06/2025] I will serve on TPC for Usenix Security'26.
+      </li>
+      <li>
         [04/2025] I will serve on shadow TPC for ACM IMC'25.
       </li>
       <li>
