--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
     <h2>Publications</h2>
     <ul>
 
+      <li class="pub">
+        <a href="publications/papers/xu-2025-asint.pdf" class="paper">ASINT: Learning AS-to-Organization Mapping from Internet Metadata</a>
+        &nbsp;
+        <br />
+        Yongzhe Xu, <b>Weitong Li</b>, Eeshan Umrani, Taejoong Chung<br />
+        arXiv preprint arXiv:2508.02571<br />
+      </li>
+
         <li class="pub">
         [To be appear] <b>Demystifying RPKI-Invalid Prefixes: Hidden Causes and Security Risks</b>
         &nbsp;
