--- a/index.html
+++ b/index.html
@@ -63,24 +63,20 @@
         [04/2025] I received travel grant from the IRTF to attend the IETF-123 meetings in Madrid, Spain.
       </li>
       <li>
-        [01/2025] Our paper "ImpROV" has been accepted to USENIX Security'25.
-      </li>  
-      <li>
         [09/2024] I have been awarded the Pratt Fellowship for the 2024-2025 academic year.
       </li>  
-      <li>
-        [05/2024] I will intern at Cablelabs in Summer 2024.
-      </li>
     </ul>
 
     <h2>Publications</h2>
     <ul>
+      (* denotes equal contribution)
+      <br /><br />
 
       <li class="pub">
         <a href="publications/papers/xu-2025-asint.pdf" class="paper">ASINT: Learning AS-to-Organization Mapping from Internet Metadata</a>
         &nbsp;
         <br />
-        Yongzhe Xu, <b>Weitong Li</b>, Eeshan Umrani, Taejoong Chung<br />
+        Yongzhe Xu*, <b>Weitong Li*</b>, Eeshan Umrani, and Taejoong Chung<br />
         arXiv preprint arXiv:2508.02571<br />
       </li>
 
