--- a/index.html
+++ b/index.html
@@ -124,6 +124,16 @@
         In Proceedings of the USENIX Security Symposium (Security'23), Anaheim, USA, August 2023<br />
     </ul>
 
+    <h2>Education</h2>
+    <ul>
+      <li>
+        <b>Ph.D.</b>, Virginia Tech, 08/2021 - 12/2025 (expected)
+      </li>
+      <li>
+        <b>B.Eng</b>, Zhejiang University, 09/2016 - 07/2020
+      </li>
+    </ul>
+
     <h2>Work</h2>
     <ul>
       <li>
