--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
     <h2>Recent Updates</h2>
     <ul>
       <li>
+        [08/2025] I received travel grant from Usenix and will attend the Usenix Security'25.
+      </li>
+      <li>
         [06/2025] I will serve on TPC for Usenix Security'26.
       </li>
       <li>
@@ -65,6 +68,26 @@
       <li>
         [09/2024] I have been awarded the Pratt Fellowship for the 2024-2025 academic year.
       </li>  
+    </ul>
+
+        <h2>Education</h2>
+    <ul>
+      <li>
+        <b>Ph.D.</b>, Virginia Tech, 08/2021 - 12/2025 (expected)
+      </li>
+      <li>
+        <b>B.Eng</b>, Zhejiang University, 09/2016 - 07/2020
+      </li>
+    </ul>
+
+    <h2>Work</h2>
+    <ul>
+      <li>
+        <b>Research Intern</b>, Cablelabs, 05/2024 - 08/2024
+      </li>
+      <li>
+        <b>Research Intern</b>, Cloudflare, 05/2023 - 08/2023
+      </li>
     </ul>
 
     <h2>Publications</h2>
@@ -124,25 +147,7 @@
         In Proceedings of the USENIX Security Symposium (Security'23), Anaheim, USA, August 2023<br />
     </ul>
 
-    <h2>Education</h2>
-    <ul>
-      <li>
-        <b>Ph.D.</b>, Virginia Tech, 08/2021 - 12/2025 (expected)
-      </li>
-      <li>
-        <b>B.Eng</b>, Zhejiang University, 09/2016 - 07/2020
-      </li>
-    </ul>
 
-    <h2>Work</h2>
-    <ul>
-      <li>
-        <b>Research Intern</b>, Cablelabs, 05/2024 - 08/2024
-      </li>
-      <li>
-        <b>Research Intern</b>, Cloudflare, 05/2023 - 08/2023
-      </li>
-    </ul>
 
     <h2>Professional Services</h2>
     <p>
