--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
     <h2>Recent Updates</h2>
     <ul>
       <li>
+        [09/2025] I have been invited to attend the Google Networking Research Summit.
+      </li>
+      <li>
         [08/2025] I received travel grant from Usenix and will attend the Usenix Security'25.
       </li>
       <li>
@@ -94,6 +97,12 @@
     <ul>
       (* denotes equal contribution)
       <br /><br />
+      <li class="pub">
+        [To be appear] <b>The Threat Landscape of IP Leasing in the Post-RPKI Era</b>
+        &nbsp;
+        <br />
+        <b>Weitong Li</b>, Yongzhe Xu, and Taejoong Chung <br />
+        In Proceedings of the IEEE Symposium on Security and Privacy (Oakland'26), San Francisco, USA, May 2026<br />
 
       <li class="pub">
         <a href="publications/papers/xu-2025-asint.pdf" class="paper">ASINT: Learning AS-to-Organization Mapping from Internet Metadata</a>
