--- a/index.html
+++ b/index.html
@@ -68,9 +68,6 @@
       <li>
         [04/2025] I received travel grant from the IRTF to attend the IETF-123 meetings in Madrid, Spain.
       </li>
-      <li>
-        [09/2024] I have been awarded the Pratt Fellowship for the 2024-2025 academic year.
-      </li>  
     </ul>
 
         <h2>Education</h2>
@@ -113,7 +110,7 @@
       </li>
 
         <li class="pub">
-        [To be appear] <b>Demystifying RPKI-Invalid Prefixes: Hidden Causes and Security Risks</b>
+        <a href="publications/papers/li-2026-demystifying.pdf" class="paper">Demystifying RPKI-Invalid Prefixes: Hidden Causes and Security Risks</a>
         &nbsp;
         <br />
         <b>Weitong Li</b>, Tao Wan, and Taejoong Chung <br />
