--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       (* denotes equal contribution)
       <br /><br />
       <li class="pub">
-        [To be appear] <b>The Threat Landscape of IP Leasing in the Post-RPKI Era</b>
+        [To be appear] <b>The Threat Landscape of IP Leasing in the RPKI Era</b>
         &nbsp;
         <br />
         <b>Weitong Li</b>, Yongzhe Xu, and Taejoong Chung <br />
