--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
     <h2>Recent Updates</h2>
     <ul>
       <li>
+        [10/2025] I have defended my PhD, great thanks to my advisor Tijay and all my collaborators!
+      </li>
+      <li>
         [09/2025] I have been invited to attend the Google Networking Research Summit.
       </li>
       <li>
