--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
     <h2>Recent Updates</h2>
     <ul>
       <li>
+        [11/2025] I will attend IETF-124 meetings in Montreal, Canada.
+      </li>
+      <li>
         [09/2025] I have been invited to attend the Google Networking Research Summit.
       </li>
       <li>
