--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- <p>I am an Assistant Professor in the <a href="https://cs.vt.edu/">Department of Computer Science</a> at <a href="https://vt.edu/">Virginia Tech</a>. --> 
 
     <p>
-      I'm a finial year PhD candidate in the Department of Computer Science at Virginia Tech, advised by <a href="https://taejoong.github.io/">Tijay Chung</a>. Before joining VT, I received my bechelor's degree from Zhejiang University.
+      I'll be a postdoctoral researcher in the Department of Computer Science at Virginia Tech. I received my PhD from Virginia Tech, advised by <a href="https://taejoong.github.io/">Tijay Chung</a>. Before joining VT, I finished my bachelor's degree from Zhejiang University.
     </p>
 
     <p>
@@ -79,7 +79,7 @@
         <h2>Education</h2>
     <ul>
       <li>
-        <b>Ph.D.</b>, Virginia Tech, 08/2021 - 12/2025 (expected)
+        <b>Ph.D.</b>, Virginia Tech, 08/2021 - 10/2025
       </li>
       <li>
         <b>B.Eng</b>, Zhejiang University, 09/2016 - 07/2020
