--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h1>Weitong Li</h1>
           <p>
             <br />
-            PhD Candidate<br />
+            Postdoctoral Researcher<br />
             Department of Computer Science<br />
             Virginia Tech<br />
           </p>
